--- a/index.html
+++ b/index.html
@@ -27,14 +27,32 @@
 		<ul class="content-box">
 			
 		</ul>
+		<div class="tanchu">
+			<div class="add-todo">增加一个Todo</div>
+			<div class="bottom">
+				<form action="" method="get">
+				<div class="add-bot">
+					<div class="shuru">
+						<input type="text" id="inputs" value="" placeholder="请输入事件名称" />
+					</div>
+					<div class="plan-box">
+						<input type="radio" name="times" value="25" />25
+						<input type="radio" name="times" value="35" checked/>35
+						<input type="radio" name="times" value="5" />5
+					</div>
+				</div>
+				<input type="button" name="subm" id="subm" value="确定" />
+				</form>
+			</div>
+		</div>
 		<div class="foot-box">
 			<div class="pub left">
 				<i class="icon-font icon-xiaolian"></i>
-				<p>待办</p>
+				<p>完成</p>
 			</div>
 			<div class="pub right">
 				<i class="icon-font icon-cry"></i>
-				<p>待办集</p>
+				<p>待办</p>
 			</div>
 		</div>
 	</body>
